--- a/Dockerfile-php
+++ b/Dockerfile-php
@@ -25,12 +25,12 @@ RUN curl -fSL "https://xdebug.org/files/$XDEBUG_FILENAME" -o "$XDEBUG_FILENAME" 
     && tar -xf "$XDEBUG_FILENAME" --strip-components=1 -C /usr/src/xdebug \
     && rm "$XDEBUG_FILENAME" \
     && cd /usr/src/xdebug \
-    && phpize && ./configure && make && make install \
+    && phpize && ./configure && make && make install && docker-php-ext-enable xdebug \
     && rm -rf /usr/src/xdebug
 
 
 # Installing Memcached from sources
-RUN apt-get install -y --no-install-recommends libmemcached-dev  zlib1g-dev \
+RUN apt-get update && apt-get install -y --no-install-recommends libmemcached-dev  zlib1g-dev \
     && cd /usr/src/ && git clone https://github.com/php-memcached-dev/php-memcached.git \
     && cd php-memcached \
     && git checkout php7 \
@@ -45,7 +45,7 @@ RUN apt-get install -y --no-install-recommends libmemcached-dev  zlib1g-dev \
 # Generate an extended CLI version
 
 RUN cd /usr/src/php \
-    && apt-get install -y --no-install-recommends libcurl4-openssl-dev libreadline6-dev \
+    && apt-get update && apt-get install -y --no-install-recommends libssl-dev libcurl4-openssl-dev libreadline6-dev libxml2-dev \
     && ./configure \
     --with-config-file-path="$PHP_INI_DIR" \
     --with-config-file-scan-dir="$PHP_INI_DIR/conf.d" \
@@ -54,4 +54,4 @@ RUN cd /usr/src/php \
     --enable-sockets --enable-sysvsem --enable-sysvshm --enable-shmop --enable-posix --without-pear --enable-pcntl
     && make -j"$(nproc)" && make install && make clean
     && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false -o APT::AutoRemove::SuggestsImportant=false \
-        libcurl4-openssl-dev libreadline6-dev
+        libcurl4-openssl-dev libreadline6-dev libxml2-dev libssl-dev
