moving commands to a separate bash script

--- a/Dockerfile-php
+++ b/Dockerfile-php
@@ -3,49 +3,21 @@ FROM php:7-fpm
 LABEL Description="This image provides PHP-fpm with common extensions"
 MAINTAINER Grgiori Kochanov public@grik.net
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
-        git libfreetype6-dev  libjpeg62-turbo-dev  libpng12-dev libmagickcore-dev libmagickwand-dev imagemagick libmagick++-dev \
-        libmemcached-dev libxml2 libxml2-dev libxslt1.1 libxslt1-dev \
-    && rm -rf /var/lib/apt/lists/* \
-    && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
-    && docker-php-ext-install -j$(nproc) gd \
-    && docker-php-ext-install -j$(nproc) mbstring \
-    && docker-php-ext-install -j$(nproc) bcmath \
-    && docker-php-ext-install -j$(nproc) mysqli \
-    && docker-php-ext-install -j$(nproc) xsl \
-    && docker-php-ext-install -j$(nproc) iconv \
-    && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false -o APT::AutoRemove::SuggestsImportant=false \
-        libfreetype6-dev  libjpeg62-turbo-dev  libpng12-dev libmagickcore-dev libmagickwand-dev libxml2-dev libxslt1-dev libmagick++-dev
 
-# Installing XDebug from sources
+# variables $PHP_INI_DIR, $PHP_VERSION, $PHP_FILENAME are defined in the parent Dockerfile
 ENV XDEBUG_FILENAME xdebug-2.4.0rc4.tgz
 
-RUN curl -fSL "https://xdebug.org/files/$XDEBUG_FILENAME" -o "$XDEBUG_FILENAME" \
-    && mkdir -p /usr/src/xdebug \
-    && tar -xf "$XDEBUG_FILENAME" --strip-components=1 -C /usr/src/xdebug \
-    && rm "$XDEBUG_FILENAME" \
-    && cd /usr/src/xdebug \
-    && phpize && ./configure && make && make install \
-    && rm -rf /usr/src/xdebug
+# php source code path is hardcoded in the parent Dockerfile
+ENV PHP_SOURCE_PATH /usr/src/php
 
 
-# Installing Memcached from sources
-RUN apt-get install -y --no-install-recommends libmemcached-dev  zlib1g-dev \
-    && cd /usr/src/ && git clone https://github.com/php-memcached-dev/php-memcached.git \
-    && cd php-memcached \
-    && git checkout php7 \
-    && phpize \
-    && ./configure --disable-memcached-sasl \
-    && make && make install \
-    && cd .. && rm -rf php-memcached \
-    && docker-php-ext-enable memcached \
-    && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false -o APT::AutoRemove::SuggestsImportant=false \
-        zlib1g-dev libmemcached-dev
+RUN php_extensions_setup.sh
+
 
 # Generate an extended CLI version
 
 RUN cd /usr/src/php \
-    && apt-get install -y --no-install-recommends libcurl4-openssl-dev libreadline6-dev \
+    && apt-get update && apt-get install -y --no-install-recommends libcurl4-openssl-dev libreadline6-dev \
     && ./configure \
     --with-config-file-path="$PHP_INI_DIR" \
     --with-config-file-scan-dir="$PHP_INI_DIR/conf.d" \
