--- a/Dockerfile-php
+++ b/Dockerfile-php
@@ -1,11 +1,13 @@
 FROM php:7-fpm
 
 LABEL Description="This image provides PHP-fpm with common extensions"
-MAINTAINER Grgiori Kochanov public@grik.net
+MAINTAINER Grigori Kochanov public@grik.net
 
 ENV XDEBUG_FILENAME xdebug-2.4.0rc4.tgz
 
 # php source code path is hardcoded in the parent Dockerfile
 ENV PHP_SOURCE_PATH /usr/src/php
 
-RUN sh -c php_extensions_setup.sh
+ADD php_extensions_setup.sh /php_extensions_setup.sh
+
+RUN ["/bin/sh", "/php_extensions_setup.sh"]
