added options to memcached and igbinary extensions configs to use in sessions, and php works

--- a/etc/nginx/conf.d/default.conf
+++ b/etc/nginx/conf.d/default.conf
@@ -4,11 +4,11 @@ server {
 
     access_log /var/log/nginx/access.log main;
 
-    root /var/www/html;
-    index index.php;
+    # Relative to the file system in php-fpm container
+    root /opt/www;
 
     location / {
-
+        index index.php;
     }
 
     # redirect server error pages to the static page /50x.html
@@ -25,4 +25,3 @@ server {
         include /etc/nginx/fastcgi_params;
     }
 }
-
