--- a/Dockerfile-php
+++ b/Dockerfile-php
@@ -14,4 +14,4 @@ RUN ["/bin/sh", "/php_extensions_setup.sh"]
 RUN mkdir /var/tmp/upload /var/sessions \
     && cp -R /usr/local/etc/ /usr/local/etc-init
 
-CMD test "$(ls -A "/usr/local/etc" 2>/dev/null)" || cp -R /usr/local/etc-init/* /usr/local/etc/
+CMD test "$(ls -A /usr/local/etc/php* 2>/dev/null)" || cp -R /usr/local/etc-init/* /usr/local/etc/
