--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ nginx:
       - ./etc/nginx/fastcgi_params:/etc/nginx/fastcgi_params
       - ./etc/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
       - ./logs:/var/log/nginx/
+      - ./wwwroot:/opt/www
   ports:
    - "8080:80"
   links:
@@ -24,5 +25,6 @@ php-fpm:
     - ./etc/:/usr/local/etc/
     - ./logs:/var/log/php/
     - ./upload_tmp:/var/upload_tmp/
+    - ./wwwroot:/opt/www
   links:
     - memcached
