--- a/etc/nginx/conf.d/default.conf
+++ b/etc/nginx/conf.d/default.conf
@@ -5,7 +5,7 @@ server {
     access_log /var/log/nginx/access.log main;
 
     # Relative to the file system in php-fpm container
-    root /opt/www;
+    root /opt/www/wwwroot;
 
     location / {
         index index.php;
