installing image magic

--- a/Dockerfile-php-images
+++ b/Dockerfile-php-images
@@ -13,14 +13,16 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 # Install ImageMagic
     && cd /usr/src/ \
     && curl -fSL http://www.imagemagick.org/download/ImageMagick.tar.xz -o ImageMagick.tar.xz \
-    && mkdir /usr/src/ImageMagick \
-    && tar -xf ImageMagick.tar.xz --strip-components=1 -C /usr/src/ImageMagick \
+    && mkdir /usr/src/ImageMagick && tar -xf ImageMagick.tar.xz --strip-components=1 -C /usr/src/ImageMagick \
     && cd /usr/src/ImageMagick \
     && ./configure  --disable-docs --without-x --without-magick-plus-plus \
            --with-dejavu-font-dir=/usr/share/fonts/truetype/dejavu --with-gslib=yes \
     && make -j"$(nproc)" && make install \
     && cd .. && rm -rf ImageMagick \
-    && docker-php-ext-install -j$(nproc) gmagick \
+    && echo no| pecl install imagick \
+    && apt-get purge -y libcups2-dev libcupsfilters-dev libcupsimage2-dev libfreetype6-dev libgs-dev \
+        libidn11-dev libijs-dev libjasper-dev libjbig-dev libjbig2dec0-dev libjpeg62-turbo-dev liblcms2-dev \
+        liblzma-dev libpaper-dev libpng12-dev libtiff5-dev libwebp-dev zlib1g-dev
 
 
 
