Added CMD to start fpm by default, edited README

--- a/php56-fpm/Dockerfile
+++ b/php56-fpm/Dockerfile
@@ -37,3 +37,4 @@ RUN apk add --no-cache openssl freetype libjpeg-turbo libpng libwebp gettext icu
     && chmod a+x /usr/local/bin/docker-php-entrypoint
 
 ENTRYPOINT ["docker-php-entrypoint"]
+CMD ["php-fpm"]
