--- a/php-fpm-imagemagic/Dockerfile
+++ b/php-fpm-imagemagic/Dockerfile
@@ -9,14 +9,16 @@ RUN apk add --no-cache tiff libjasper libbz2 fontconfig openjpeg \
         freetype-dev libjpeg-turbo-dev libpng-dev libwebp-dev jasper-dev tiff-dev openjpeg-dev fontconfig-dev \
     && export CPU_COUNT=$(cat /proc/cpuinfo | grep processor | wc -l) \
     && wget -O FLIF.tar.gz https://github.com/FLIF-hub/FLIF/archive/v0.3.tar.gz \
-        && tar -xf FLIF.tar.gz && cd FLIF-0.3/src && make -j$CPU_COUNT libflif.so && make install \
-        && cd ../../ && rm -rf FLIF* /usr/local/share/man/man1/flif.1 \
+        && tar -xf FLIF.tar.gz && cd FLIF-0.3/src && make -j$CPU_COUNT libflif.so \
+        && cp library/*.h /usr/include && cp libflif.so libflif.so.0 /usr/lib && cd ../.. \
     && wget http://www.imagemagick.org/download/ImageMagick.tar.xz \
         && tar -xf ImageMagick.tar.xz && cd ImageMagick* \
         && ./configure  --disable-docs --without-x --without-magick-plus-plus --with-gslib=yes --with-wmf=no \
-        && make -j$CPU_COUNT && make install && ldconfig /usr/local/lib \
-        && cd .. && rm -rf ImageMagick* \
-    && yes no| pecl install imagick &&  docker-php-ext-enable imagick \
-    && apk del ext-dev-dependencies
+        && make -j$CPU_COUNT && make install && ldconfig /usr/local/lib && cd .. \
+    && rm -rf ImageMagick* FLIF* \
+    && yes no| pecl install imagick \
+    && docker-php-ext-enable imagick \
+    && apk del ext-dev-dependencies && rm -rf /tmp/pear
 
-
+ENTRYPOINT ["docker-php-entrypoint"]
+CMD ["php-fpm"]
