--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,19 +7,22 @@ services:
     ports:
       - "80:80"
     volumes:
-      # background issuing and renewing ACME certificates
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      # Communicate with PHP via Unix socket
+      - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
       - fpm-socket:/fpm-socket/
 
   application:
-    image:  grigori/phpextensions:8.3-fpm
+    image: grigori/demo-application
+    build:
+      context: docker
+      dockerfile: production-build.Dockerfile
+    expose:
+      - 9000
     volumes:
       # application code
       - fpm-socket:/fpm-socket/
       - type: bind
-        source: ./scripts/
-        target: /scripts/
+        source: ./src/
+        target: /opt/www
       - type: bind
         source: ./etc/
         target: /usr/local/etc/
