--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -45,10 +45,10 @@ http {
         location / {
             include                 fastcgi_params;
             fastcgi_index           index.php;
-            fastcgi_pass            unix:/fpm-socket/socket;
+            fastcgi_pass            application:9000;
             fastcgi_split_path_info ^(.+\.php)(/.*)$;
             fastcgi_param           PATH_INFO $fastcgi_path_info;
-            fastcgi_param           SCRIPT_FILENAME  /scripts$fastcgi_script_name;
+            fastcgi_param           SCRIPT_FILENAME  /opt/www$fastcgi_script_name;
         }
 
     }
